tests/sksl/errors/SwitchDuplicateCase.sksl
void main() {
    switch (1) {
        case 0:
        case 1:
        case 0:
            break;
    }
}
